force-app/main/default/objects/Campaign/fields/Display_on_Website__c.field-meta.xml
<CustomField>
    <fullName>Display_on_Website__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this Campaign/Event should be included in the web site events page.</description>
    <inlineHelpText>If this Campaign/Event should be included in the web site events page.</inlineHelpText>
    <label>Display on Website</label>
    <type>Checkbox</type>
</CustomField>