force-app/main/default/objects/Campaign/fields/Event_Link__c.field-meta.xml
<CustomField>
    <fullName>Event_Link__c</fullName>
    <description>Public link to this event for volunteers to sign up for job shifts.</description>
    <formula>HYPERLINK(Event_URL__c, Event_URL__c, &apos;new&apos;)</formula>
    <inlineHelpText>Public link to this event for volunteers to sign up for job shifts.</inlineHelpText>
    <label>Event Link</label>
    <type>Text</type>
</CustomField>