force-app/main/default/objects/Campaign/fields/Event_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_URL__c</fullName>
    <formula>&#39;https://sfdc.co/weecycle-event?id=&#39; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event URL</label>
    <type>Text</type>
</CustomField>